improvements to blueprint system to support ship pipeline

--- a/cmake/blueprint/CMakeLists.txt
+++ b/cmake/blueprint/CMakeLists.txt
@@ -83,12 +83,13 @@ set( BLUEPRINT_SOURCES_SRC
     ${BLUEPRINT_SRC_DIR}/spaces/spaceUtils.cpp
     )
 
-set( BLUEPRINT_SOURCES ${BLUEPRINT_SOURCES_API} ${BLUEPRINT_SOURCES_SRC} ${AGG_SRC} )
+set( BLUEPRINT_SOURCES ${BLUEPRINT_SOURCES_API} ${BLUEPRINT_SOURCES_SRC} )
 
 source_group( src FILES ${BLUEPRINT_SOURCES} )
 
 add_library( blueprintlib STATIC 
 		${CLIPPER_SOURCE}
+        ${AGG_SRC}
 		${BLUEPRINT_SOURCES} 
 		)
 		
