--- a/cmake/blueprint_tests/CMakeLists.txt
+++ b/cmake/blueprint_tests/CMakeLists.txt
@@ -3,6 +3,9 @@ cmake_minimum_required(VERSION 2.8)
 #get boost
 include( ${BLUEPRINT_ROOT_DIR}/cmake/boost_include.cmake )
 
+#get cgal
+include( ${BLUEPRINT_ROOT_DIR}/cmake/cgal_include.cmake )
+
 #get agg
 include( ${BLUEPRINT_ROOT_DIR}/cmake/agg_include.cmake )
 
@@ -24,6 +27,14 @@ include( ${BLUEPRINT_ROOT_DIR}/cmake/gtest_include.cmake )
 #get the tests
 set( BLUEPRINT_TESTS_SOURCE
     ${BLUEPRINT_ROOT_DIR}/tests/blueprintTests.cpp )
+    
+set( BLUEPRINT_TEST_FILES
+    ${BLUEPRINT_ROOT_DIR}/tests/testfiles/basic.blu
+    ${BLUEPRINT_ROOT_DIR}/tests/testfiles/basic_child.blu
+    ${BLUEPRINT_ROOT_DIR}/tests/testfiles/basic_connection.blu 
+    ${BLUEPRINT_ROOT_DIR}/tests/testfiles/basic_loop.blu
+    ${BLUEPRINT_ROOT_DIR}/tests/testfiles/basic_exterior_connection.blu  )
+    
 
 add_executable( blueprint_tests
 					${BLUEPRINT_TESTS_SOURCE}
@@ -37,6 +48,7 @@ set_target_properties( blueprint_tests PROPERTIES FOLDER blueprint_tests )
 link_boost( blueprint_tests filesystem )
 link_boost( blueprint_tests iostreams )
 link_boost( blueprint_tests serialization )
+link_cgal( blueprint_tests )
 link_agg( blueprint_tests )
 link_wykobi( blueprint_tests )
 link_clipper( blueprint_tests )
@@ -49,3 +61,4 @@ link_gtest( blueprint_tests )
 link_gtest_main( blueprint_tests )
 
 install( TARGETS blueprint_tests DESTINATION bin)
+install( FILES ${BLUEPRINT_TEST_FILES} DESTINATION testfiles )
