progress on cgal export

--- a/cmake/blueprint_tests/CMakeLists.txt
+++ b/cmake/blueprint_tests/CMakeLists.txt
@@ -31,9 +31,11 @@ set( BLUEPRINT_TESTS_SOURCE
 set( BLUEPRINT_TEST_FILES
     ${BLUEPRINT_ROOT_DIR}/tests/testfiles/basic.blu
     ${BLUEPRINT_ROOT_DIR}/tests/testfiles/basic_child.blu
+    ${BLUEPRINT_ROOT_DIR}/tests/testfiles/basic_child_intersect.blu
     ${BLUEPRINT_ROOT_DIR}/tests/testfiles/basic_connection.blu 
     ${BLUEPRINT_ROOT_DIR}/tests/testfiles/basic_loop.blu
     ${BLUEPRINT_ROOT_DIR}/tests/testfiles/basic_exterior_connection.blu 
+    ${BLUEPRINT_ROOT_DIR}/tests/testfiles/basic_exterior_connection_intersect.blu 
     ${BLUEPRINT_ROOT_DIR}/tests/testfiles/complex.blu 
     ${BLUEPRINT_ROOT_DIR}/tests/testfiles/complex_big.blu  )
     
