progress on compilation of geometry

--- a/cmake/blueprint/CMakeLists.txt
+++ b/cmake/blueprint/CMakeLists.txt
@@ -47,6 +47,7 @@ set( BLUEPRINT_API
     ${BLUEPRINT_API_DIR}/blueprint/object.h
     ${BLUEPRINT_API_DIR}/blueprint/connection.h
     ${BLUEPRINT_API_DIR}/blueprint/wall.h
+    ${BLUEPRINT_API_DIR}/blueprint/clipperUtils.h
     )
     
     
